[BEAM-3900] Compilation warnings resolved. Some remnants of euphoria windowing removed. Minor code improvements.