@@ -33,13 +33,13 @@ public class DAGTest {
   @Test
   public void testAdd() {
     DAG<Integer> dag = DAG.of(1);
-    assertEquals(dag.size(), 1);
+    assertEquals(1, dag.size());
   }
 
   @Test
   public void testGetNodeExists() {
     DAG<Integer> dag = DAG.of(1);
-    assertEquals(new Integer(1), dag.getNode(1).get());
+    assertEquals(Integer.valueOf(1), dag.getNode(1).get());
   }
 
   @Test(expected = IllegalStateException.class)
@@ -90,7 +90,7 @@ public class DAGTest {
 
     assertEquals(1, oneSubgraph.size());
     Node<Integer> one = Iterables.getOnlyElement(oneSubgraph.getRoots());
-    assertEquals(new Integer(1), one.get());
+    assertEquals(Integer.valueOf(1), one.get());
     assertEquals(0, one.getParents().size());
     assertEquals(0, one.getChildren().size());
     assertTrue(oneSubgraph.getLeafs().contains(new Node<>(1)));
@@ -103,7 +103,7 @@ public class DAGTest {
     assertEquals(5, sixSubgraph.size());
     Node<Integer> six = Iterables.getOnlyElement(sixSubgraph.getLeafs());
     assertEquals(six, sixSubgraph.getNode(6));
-    assertEquals(new Integer(6), six.get());
+    assertEquals(Integer.valueOf(6), six.get());
     assertEquals(2, six.getParents().size());
     assertTrue(six.getParents().contains(new Node<>(5)));
     assertTrue(six.getParents().contains(new Node<>(3)));
@@ -134,7 +134,7 @@ public class DAGTest {
     assertEquals(4, fiveSubgraph.size());
     five = Iterables.getOnlyElement(fiveSubgraph.getLeafs());
     assertEquals(five, fiveSubgraph.getNode(5));
-    assertEquals(new Integer(5), five.get());
+    assertEquals(Integer.valueOf(5), five.get());
     assertEquals(2, five.getParents().size());
     assertTrue(five.getParents().contains(new Node<>(2)));
     assertTrue(five.getParents().contains(new Node<>(4)));
